# dddoski

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
dddoski/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: dddoski.conf
shop/: context_processors.py  models.py  urls.py  views.py  wagtail_hooks.py
shop/migrations/: 0001_initial.py  0002_homepage.py  0003_remove_productpage_image_productimage.py
static/css/: styles.css
templates/shop/: base.html  basket.html  home_page.html  order_form.html  order_success.html  product_page.html  test.html
templates/shop/partials/: fullscreen_gallery.html
