[project]
name = "dddoski"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2,<6.0)",
    "wagtail (>=6.4.1,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "django-taggit (>=6.1.0,<7.0.0)",
    "django-modelcluster (>=6.4,<7.0)",
    "django-treebeard (>=4.7.1,<5.0.0)",
    "draftjs-exporter (>=5.1.0,<6.0.0)",
    "wagtail-modeladmin (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
